# sl_sensor

./: .gitignore  CITATION.bib  CITATION.cff  README.md  dependencies.vcs
core/sl_sensor_calibration/: CMakeLists.txt  nodelet_plugins.xml  package.xml
core/sl_sensor_calibration/bash_scripts/: calibrate_both_cams_and_generate_pattern.sh  prepare_and_run_bundle_adjustment.sh
core/sl_sensor_calibration/calibration_files/: bf3_mono.xml  calibration_result.xml  cam1.xml  cam1_proj_fixed.xml  cam1_proj_fixed_new2.xml  cam2.xml  cam2_new.xml  cam2_new2.xml  cam2_new3.xml  init.xml  sample.xml
core/sl_sensor_calibration/launch/: acquire_calibration_sequences.launch  calibrate_primary_camera.launch  calibrate_secondary_camera.launch  calibration_sequence_acquisition.launch  calibrator_primary_camera.launch  calibrator_secondary_camera.launch  prepare_bundle_adjustment.launch  run_bundle_adjustment.launch  view_primary_camera_calibration_residuals.launch  view_secondary_camera_calibration_residuals.launch
core/sl_sensor_calibration/param/: default_parameters.yaml
core/sl_sensor_calibration/python_scripts/: visualise_residuals.py
core/sl_sensor_calibration/rqt/: calibration_old.perspective
core/sl_sensor_calibration/rviz/: calibration_single_display.rviz
core/sl_sensor_calibration/src/: BAProblem.cpp  calibration_data.cpp  calibration_data_acquisition_nodelet.cpp  calibration_sequence_acquisition_nodelet.cpp  calibration_utilities.cpp  calibration_utils.cpp  calibrator.cpp  calibrator_node.cpp  camera_parameters.cpp  dual_camera_calibration_preparator.cpp  dual_camera_calibration_preparator_node.cpp  intrinsic_parameters.cpp  run_bundle_adjustment_node.cpp
core/sl_sensor_codec/: CMakeLists.txt  nodelet_plugins.xml  package.xml
core/sl_sensor_codec/codec_yaml/: codec_config.yaml
core/sl_sensor_codec/launch/: generate_patterns.launch
core/sl_sensor_codec/param/: default_parameters.yaml
core/sl_sensor_codec/src/: codec.cpp  codec_common.cpp  decoder.cpp  decoder_nodelet.cpp  encoder.cpp  generate_patterns_node.cpp  phase_shift_utilities.cpp  phase_shift_with_tpu_codec.cpp  phase_shift_with_tpu_decoder.cpp  phase_shift_with_tpu_encoder.cpp  two_plus_one_with_tpu_decoder.cpp  two_plus_one_with_tpu_encoder.cpp
core/sl_sensor_conversions/: CMakeLists.txt  package.xml
core/sl_sensor_conversions/src/: conversions.cpp
core/sl_sensor_frame_grabber/: CMakeLists.txt  nodelet_plugins.xml  package.xml
core/sl_sensor_frame_grabber/launch/: frame_grabber.launch
core/sl_sensor_frame_grabber/msg/: ImageArray.msg
core/sl_sensor_frame_grabber/plugins/: nodelets.xml
core/sl_sensor_frame_grabber/src/: frame_grabber_nodelet.cpp  frame_logger_nodelet.cpp
core/sl_sensor_frame_grabber/srv/: GrabImages.srv
core/sl_sensor_image_acquisition/: CMakeLists.txt  nodelet_plugins.xml  package.xml
core/sl_sensor_image_acquisition/launch/: image_acquisition_bottom_camera.launch  image_acquisition_test.launch  image_synchroniser.launch
core/sl_sensor_image_acquisition/msg/: ImageArray.msg
core/sl_sensor_image_acquisition/param/: default_parameters.yaml
core/sl_sensor_image_acquisition/src/: image_array_logger_nodelet.cpp  image_array_utilities.cpp  image_grouper.cpp  image_synchroniser_nodelet.cpp
core/sl_sensor_image_acquisition/srv/: CommandImageSynchroniser.srv  NotifyBadData.srv
core/sl_sensor_io/: CMakeLists.txt  package.xml
core/sl_sensor_io/src/: frame_timings_csv_writer.cpp  numbered_frame_reader.cpp  tum_csv_reader.cpp  tum_csv_writer.cpp
core/sl_sensor_logger/: CMakeLists.txt  nodelet_plugins.xml  package.xml
core/sl_sensor_logger/launch/: launch_loggers.launch
core/sl_sensor_logger/src/: image_array_logger_nodelet.cpp  logger_nodelet.cpp  point_cloud_logger_nodelet.cpp
core/sl_sensor_logger/srv/: EnableLogger.srv
core/sl_sensor_motion_compensation/: CMakeLists.txt  nodelet_plugins.xml  package.xml
core/sl_sensor_projector/: CMakeLists.txt  package.xml
core/sl_sensor_projector/src/: lightcrafter_4500.cpp  (+3 more)
core/sl_sensor_reconstruction/: CMakeLists.txt  nodelet_plugins.xml  package.xml
core/sl_sensor_registration/: CMakeLists.txt  package.xml
core/sl_sensor_slstudio/: CMakeLists.txt  package.xml
core/sl_sensor_timer/: CMakeLists.txt  package.xml
core/sl_sensor_visualise/: CMakeLists.txt  nodelet_plugins.xml  package.xml
core/sl_sensor_vo/: CMakeLists.txt  package.xml
sl_sensor/: CMakeLists.txt  package.xml
sl_sensor/launch/: 2p1_tpu_horizontal.launch  2p1_tpu_horizontal_motion_compensation.launch  2p1_tpu_vertical.launch  2p1_tpu_vertical_colour.launch  2p1_tpu_vertical_motion_compensation.launch  calibration_sequence_acquisition.launch  calibrator.launch  calibrator2.launch  calibrator3.launch  calibrator_primary_camera.launch  calibrator_secondary_camera.launch  display_point_cloud_rviz.launch  dual_camera_preparator_bundle_adjustment.launch  dual_camera_projector_colour_scanning.launch  hardware_trigger_psp_tpu_horizontal.launch  hardware_trigger_psp_tpu_vertical.launch  hardware_trigger_psp_tpu_vertical_rosbag.launch  launch_loggers.launch  pattern_switching_test.launch  process_rosbag.launch  psp_tpu_both.launch  psp_tpu_horizontal.launch  psp_tpu_horizontal_motion_compensation.launch  psp_tpu_horizontal_rosbag.launch  psp_tpu_vertical.launch  psp_tpu_vertical_colour.launch  psp_tpu_vertical_motion_compensation.launch  psp_tpu_vertical_rosbag.launch  record_data.launch  record_data_horizontal.launch  record_data_primary_cam.launch  record_data_secondary_cam.launch  record_data_vertical.launch  rosbag_processing.launch  run_bundle_adjustment.launch  scaning_gui.launch  single_camera_projector_scanning.launch  sl_sensor_pattern_switching.launch  view_bundle_adjustment_calibration_residuals.launch  view_primary_camera_calibration_residuals.launch  (+1 more)
sl_sensor/rqt/: scan_gui.perspective
sl_sensor/rviz/: calibration_single_display.rviz  demo.rviz  demo2.rviz  demo3.rviz  record.rviz  rosbag_processing.rviz  scan_rqt_gui.rviz  scan_rqt_gui_colour.rviz  scan_rqt_gui_monochrome.rviz  show_pc.rviz
sl_sensor/script/: project_pattern.sh
(+165 files in other folders)
