<?xml version="1.0"?>
<package format="2">
  <name>sl_sensor</name>
  <version>0.0.0</version>
  <description>Package that runs with the SL sensor</description>

  <maintainer email="tlam@student.ethz.ch">Lam Teng Foong</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>sl_sensor_conversions</depend>
  <depend>sl_sensor_io</depend>
  <depend>sl_sensor_timer</depend>
  <depend>sl_sensor_registration</depend>
  <depend>sl_sensor_visualise</depend>
  <depend>sl_sensor_slstudio</depend>
  <depend>sl_sensor_vo</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
