<?xml version="1.0"?>
<package format="2">
  <name>sl_sensor</name>
  <version>0.0.0</version>
  <description>Package that runs with the SL sensor</description>

  <maintainer email="tlam@student.ethz.ch">Lam Teng Foong</maintainer>

  <license>BSD3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>sl_sensor_calibration</depend>	
  <depend>sl_sensor_codec</depend>	
  <depend>sl_sensor_image_acquisition</depend>	
  <depend>sl_sensor_logger</depend>	
  <depend>sl_sensor_motion_compensation</depend>	
  <depend>sl_sensor_projector</depend>	
  <depend>sl_sensor_reconstruction</depend>
  <depend>sl_sensor_registration</depend>	
  <depend>sl_sensor_rqt_guis_common</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
