<?xml version="1.0"?>
<package format="2">
  <name>sl_sensor_calibration</name>
  <version>0.0.0</version>
  <description>Calibration utilities for sl sensor</description>

  <maintainer email="tlam@student.ethz.ch">Lam Teng Foong</maintainer>

  <license>BSD3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>cv_bridge</depend>
  <depend>nodelet</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>sl_sensor_image_acquisition</depend>
  <depend>sl_sensor_projector</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <!-- These are required for multicamera-calibration -->
  <depend>ceres_catkin</depend>
  <depend>eigen_catkin</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>

  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
      <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>

</package>
