<?xml version="1.0"?>
<package format="2">
  <name>sl_sensor_codec</name>
  <version>0.0.0</version>
  <description>Codec for different structured light patterns</description>

  <maintainer email="tlam@student.ethz.ch">Lam Teng Foong</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <exec_depend>message_runtime</exec_depend>

  <depend>pluginlib</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>cv_bridge</depend>
  <depend>sl_sensor_image_acquisition</depend>
  <depend>sl_sensor_calibration</depend>
  <depend>sl_sensor_projector</depend>
  <depend>sensor_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
      <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>

</package>
