<?xml version="1.0"?>
<package format="2">
  <name>sl_sensor_conversions</name>
  <version>0.0.0</version>
  <description>Package that performs commonly used conversions</description>

  <maintainer email="tlam@student.ethz.ch">Lam Teng Foong</maintainer>

  <license>BSD3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf_conversions</depend>  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
