<?xml version="1.0"?>
<package format="2">
  <name>sl_sensor_frame_grabber</name>
  <version>0.0.0</version>
  <description>Grab images and groups them based on projector trigger</description>

  <maintainer email="tlam@student.ethz.ch">Lam Teng Foong</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>versavis</depend>

  <build_depend>pluginlib</build_depend>
  <build_depend>nodelet</build_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>nodelet</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
      <nodelet plugin="${prefix}/plugins/nodelets.xml"/>
  </export>

</package>
