<?xml version="1.0"?>
<package format="2">
  <name>sl_sensor_image_acquisition</name>
  <version>0.0.0</version>
  <description>Grab images and groups them based on projector trigger</description>

  <maintainer email="teng.foong@ethz-asl.ch">Lam Teng Foong</maintainer>
  
  <license>GPLv3</license>

  <build_depend>message_generation</build_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>nodelet</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>sl_sensor_projector</depend>
  <depend>versavis</depend>

  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
      <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>

</package>
