<?xml version="1.0"?>
<package format="2">
  <name>sl_sensor_logger</name>
  <version>0.0.0</version>
  <description>Logging utilities for sl sensor</description>

  <maintainer email="teng.foong@ethz-asl.ch">Lam Teng Foong</maintainer>
  
  <license>GPLv3</license>

  <build_depend>message_generation</build_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>cv_bridge</depend>
  <depend>nodelet</depend>
  <depend>pluginlib</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>sl_sensor_image_acquisition</depend>
  <depend>sl_sensor_reconstruction</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>


  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
      <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>

</package>
