<?xml version="1.0"?>
<package format="2">
  <name>sl_sensor_motion_compensation</name>
  <version>0.0.0</version>
  <description>Motion compensation algorithms for sl sensor</description>

  <maintainer email="tlam@student.ethz.ch">Lam Teng Foong</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <exec_depend>message_runtime</exec_depend>
  <depend>pluginlib</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>sl_sensor_image_acquisition</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
      <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>

</package>
