<?xml version="1.0"?>
<package format="2">
  <name>sl_sensor_projector</name>
  <version>0.0.0</version>
  <description>ROS Interface for projectors</description>

  <maintainer email="teng.foong@ethz-asl.ch">Lam Teng Foong</maintainer>
  
  <license>GPLv3</license>

  <build_depend>message_generation</build_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>

  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
