<?xml version="1.0"?>
<package format="2">
  <name>sl_sensor_timer</name>
  <version>0.0.0</version>
  <description>Package that has timing utilities to measure time taken for processes</description>

  <maintainer email="teng.foong@ethz-asl.ch">Lam Teng Foong</maintainer>
  
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
