<?xml version="1.0"?>
<package format="2">
  <name>sl_sensor_visualise</name>
  <version>0.0.0</version>
  <description>Package that has code to help visualisation of results</description>

  <maintainer email="tlam@student.ethz.ch">Lam Teng Foong</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
