<?xml version="1.0"?>
<package format="2">
  <name>sl_sensor_visualise</name>
  <version>0.0.0</version>
  <description>Package that has code to help visualisation of results</description>

  <maintainer email="tlam@student.ethz.ch">Lam Teng Foong</maintainer>

  <license>BSD3</license>

  <build_depend>pluginlib</build_depend>
  <build_depend>nodelet</build_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>sl_sensor_image_acquisition</depend>
  <depend>sl_sensor_calibration</depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>nodelet</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
      <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>

</package>
