<?xml version="1.0"?>
<package format="2">
  <name>sl_sensor_vo</name>
  <version>0.0.0</version>
  <description>Package that for the SL sensor to perform VO</description>

  <maintainer email="tlam@student.ethz.ch">Lam Teng Foong</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
