<?xml version="1.0"?>
<package format="2">
  <name>sl_sensor_vo</name>
  <version>0.0.0</version>
  <description>Package that for the SL sensor to perform VO</description>

  <maintainer email="tlam@student.ethz.ch">Lam Teng Foong</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sl_sensor_timer</depend>
  <depend>sl_sensor_io</depend>
  <depend>sl_sensor_conversions</depend>
  <depend>sl_sensor_slstudio</depend>
  <depend>versavis</depend>
  <depend>pcl_ros</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>  
  <depend>sensor_msgs</depend>  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
