<?xml version="1.0"?>
<package>
  <name>scanning_gui</name>
  <version>0.0.0</version>
  <description>Buttons that send basic commands to image synchroniser to start/stop scanning process</description>
  <maintainer email="tlam@student.ethz.ch">Lam Teng Foong</maintainer>
  <license>BSD3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui_py</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>

</package>
