<?xml version="1.0"?>
<package format="2">
  <name>sl_sensor_calibration_gui</name>
  <version>0.0.0</version>
  <description>Buttons that send calibration sequence acquisition nodelet to get calibration sequences</description>
  <maintainer email="teng.foong@ethz-asl.ch">Lam Teng Foong</maintainer>
  
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>

</package>
