<?xml version="1.0"?>
<package format="2">
  <name>sl_sensor_rqt_guis_common</name>
  <version>0.0.0</version>
  <description>GUI interface for SL sensor</description>
  <maintainer email="tlam@student.ethz.ch">Lam Teng Foong</maintainer>
  <license>BSD3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>sl_sensor_scanning_gui</depend>
  <depend>sl_sensor_calibration_gui</depend>
</package>
